Feature #13059
Update dependencies according to the changes in
silverpeas-dependencies-bom.

MetaData is refined to take into account changes in the new version of
Tika. Fix also the tests in MetadataExtractorTest after ensuring the
metadata stored in the files under the tests are as they are parsed by
Tika..

Fix unit tests using UriBuilder whose implementation is usually provided
by a JEE container! They use instead URI for now.

Add explicitly jersey-common in the test dependencies so that UriBuilder
used by business objects don't break a unit test for missing class.

Remove dependency on jetbrains annotation lib to prefer those provided
by the JSR 305.